--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
 body{
     background-color: rgb(44, 42, 42);
+    background-image: url("https://c4.wallpaperflare.com/wallpaper/531/951/621/digital-digital-art-artwork-illustration-minimalism-hd-wallpaper-preview.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+   
+
 }
 
 .div-box{
 justify-content: center;
-width: 500px;
-height: 500px;
+width: 600px;
+height: auto;
 margin-left: auto;
 margin-right: auto;
-background-color: rgb(248, 255, 57);
+background-color: rgba(246, 255, 0, 0.836);
 margin-top: 4%;
-border-radius: 20px;
+border-radius: 10px;
 flex-wrap: wrap;
+padding: 10px;
 }
 
 h1{
     text-align: center;
-    
+     margin-top: 10px; top: 20px;
     position: relative;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -36,7 +42,7 @@ input{
 }
 
 button{
-    width: 20%;
+    width: 12%;
     height: 34px;
     border: 2px solid;
     border-radius: 10px;
@@ -45,6 +51,8 @@ button{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
 }
+
+
 
 button:hover{
     color: black;
@@ -77,6 +85,17 @@ button:hover{
     
   }
 @media only screen and (max-width: 600px) {
+
+  body{
+    background-color: rgb(44, 42, 42);
+    background-image: url("https://c4.wallpaperflare.com/wallpaper/586/603/742/minimalism-4k-for-mac-desktop-wallpaper-preview.jpg");
+     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+
     .div-box {
       width: 90%;
       height: auto;
@@ -105,4 +124,5 @@ button:hover{
       display: block;
     }
   }
-  
+
+
